<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gists">

    <fragment
        android:id="@+id/navigation_gists"
        android:name="com.jeffersonalvess.gists.ui.home.GistsFragment"
        android:label="@string/title_gists"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.jeffersonalvess.gists.ui.dashboard.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.jeffersonalvess.gists.ui.notifications.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_notifications" />
</navigation>